--- a/src/components/about/Terminal.module.scss
+++ b/src/components/about/Terminal.module.scss
@@ -1,16 +1,13 @@
 @import "../../variables.modules";
 
 i {
-  padding: 0.5rem;
-
+  padding: 0.4rem;
   &.red {
     color: $red;
   }
-
   &.amber {
     color: $yellow;
   }
-
   &.green {
     color: $green;
   }
@@ -20,6 +17,11 @@ i {
   p,
   li {
     color: $white;
+    font-size: 1.5rem;
+
+    @media only screen and (max-width: 900px) {
+      font-size: 1.2rem;
+    }
   }
 
   a,
