--- a/src/components/portfolio/PortfolioBlock.module.scss
+++ b/src/components/portfolio/PortfolioBlock.module.scss
@@ -1,4 +1,5 @@
 .wrap {
+  display: grid;
   position: relative;
   margin-bottom: 1rem;
   border-radius: 25px;
@@ -19,5 +20,5 @@
 
 .wrap:hover::before {
   opacity: 0.15;
-  transition: all 400ms ease;
+  transition: opacity 0.4s ease;
 }
