Responsive fixes + upd packages

--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -9,9 +9,9 @@ ul {
 }
 
 .skills {
-  columns: 2;
+  columns: 1;
 
-  @media only screen and (max-width: 900px) {
-    columns: 1;
+  @media only screen and (min-width: 900px) {
+    columns: 2;
   }
 }
