--- a/src/components/about/Terminal.module.scss
+++ b/src/components/about/Terminal.module.scss
@@ -14,13 +14,16 @@ i {
 }
 
 .terminal {
+  margin-top: 50px;
+  border-radius: 0.5rem;
+
   p,
   li {
     color: $white;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 
-    @media only screen and (max-width: 900px) {
-      font-size: 1.2rem;
+    @media only screen and (min-width: 900px) {
+      font-size: 1.5rem;
     }
   }
 
