Add ugly scrollbar

--- a/src/components/Layout.module.scss
+++ b/src/components/Layout.module.scss
@@ -1,5 +1,15 @@
 @import "../variables.modules";
 
+* {
+  scrollbar-color: #8d53ff transparent;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: #8d53ff;
+}
+*::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
 .dark {
   color: $white;
 
