--- a/src/components/Layout.module.scss
+++ b/src/components/Layout.module.scss
@@ -1,15 +1,5 @@
 @import "../variables.modules";
 
-* {
-  scrollbar-color: #8d53ff transparent;
-}
-*::-webkit-scrollbar-thumb {
-  background-color: #8d53ff;
-}
-*::-webkit-scrollbar-track {
-  background-color: transparent;
-}
-
 .dark {
   color: $white;
 
@@ -17,6 +7,17 @@
   i,
   li {
     color: $white;
+  }
+
+  a:hover,
+  a:focus {
+    color: $primary;
+    transition: color 0.4s ease;
+  }
+
+  a > i:hover {
+    color: $primary;
+    transition: color 0.4s ease;
   }
 
   footer {
@@ -31,6 +32,17 @@
   i,
   li {
     color: $dark;
+  }
+
+  a:hover,
+  a:focus {
+    color: $secondary;
+    transition: color 0.4s ease;
+  }
+
+  a > i:hover {
+    color: $secondary;
+    transition: color 0.4s ease;
   }
 
   footer {
