--- a/src/components/portfolio/PortfolioBlock.module.scss
+++ b/src/components/portfolio/PortfolioBlock.module.scss
@@ -1,3 +1,5 @@
+@import "../../variables.modules";
+
 .wrap {
   display: grid;
   position: relative;
@@ -15,7 +17,14 @@
   height: 100%;
   width: 100%;
   border-radius: 25px;
-  background: #8d53ff;
+}
+
+.dark.wrap::before {
+  background-color: $primary;
+}
+
+.light.wrap::before {
+  background-color: $secondary;
 }
 
 .wrap:hover::before {
