--- a/src/variables.modules.scss
+++ b/src/variables.modules.scss
@@ -1,18 +1,11 @@
+$dark: #1f1f1f;
+$light: #f8f8f8;
 $primary: #98c379;
 $secondary: #336699;
-$blue: #1d91e3;
-$pink: #ca6be6;
-$white: #f8f8f8;
-$dark: #1f1f1f;
 $red: #ff6057;
 $yellow: #ffbd2e;
 $green: #27c93f;
-$lightgray: #c9c9c9;
 
 .shadowed {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.4);
-}
-
-i {
-  padding: 0 0.4rem;
 }
