--- a/src/components/Layout.module.scss
+++ b/src/components/Layout.module.scss
@@ -2,20 +2,16 @@
 
 .dark {
   color-scheme: dark;
-  color: $white;
+  color: $light;
 
   a {
-    color: $white;
+    color: $light;
   }
 
   a:hover,
   a:focus {
     color: $primary;
     transition: color 0.4s ease;
-  }
-
-  footer {
-    color: $white;
   }
 }
 
@@ -31,9 +27,5 @@
   a:focus {
     color: $secondary;
     transition: color 0.4s ease;
-  }
-
-  footer {
-    color: $dark;
   }
 }
